examples/errors/parsing/main-trailing-decl.cn
main : () [impure] = () fun f : Int -> Int [pure] = { n -> n }
